--- a/api/schoolbus/src/main/resources/application.properties
+++ b/api/schoolbus/src/main/resources/application.properties
@@ -1,1 +1,1 @@
-spring.datasource.url:jdbc:h2:./SchoolBusDB/schoolBus.service;AUTO_SERVER=TRUE;LOCK_TIMEOUT=100000
+spring.datasource.url:jdbc:h2:./api/SchoolBusDB/schoolBus.service;AUTO_SERVER=TRUE;LOCK_TIMEOUT=100000
